Responsivness and z-index fixes

--- a/style.scss
+++ b/style.scss
@@ -22,9 +22,9 @@
   --brown-900: #3d1f14;
 
   --peach-white-opaque: #fff0ea;
-  --burg-500-opaque: #d68585;
-  --burg-600-opaque: #c66c6c;
-  --burg-700-opaque: #773838;
+  --burg-500-opaque: hsl(0, 50%, 68%); // TODO
+  --burg-600-opaque: rgba(198, 108, 108, 0.3);
+  --burg-700-opaque: rgba(118, 55, 55, 0.5);
 
   --border-radius: 4px;
 
@@ -39,7 +39,8 @@
   --text-4xl: 32px;
   --text-5xl: 36px;
   --text-6xl: 48px;
-  --text-7xl: 88px;
+  --text-7xl: 64px;
+  --text-8xl: 88px;
 
   --font-display: 'BioRhyme', serif;
   --font-primary: 'Dosis', sans-serif;
@@ -61,6 +62,7 @@
 
 html {
   box-sizing: border-box;
+  // overscroll-behavior-y: contain;
 }
 
 body {
@@ -69,6 +71,10 @@ body {
   font-family: var(--font-primary);
   line-height: 1.5;
   font-weight: 400;
+  overflow-x: hidden;
+
+  // TODO
+  padding-bottom: 10rem;
 }
 
 ul {
@@ -92,26 +98,72 @@ h4,
 h5,
 h6 {
   font-family: var(--font-display);
+  line-height: 1.02;
+}
+
+h2 {
+  font-size: var(--text-6xl);
+
+  @media only screen and (max-width: 800px) {
+    font-size: var(--text-4xl);
+  }
+  @media only screen and (max-width: 800px) {
+    font-size: var(--text-3xl);
+  }
 }
 
 button {
   font: inherit;
+  font-size: var(--text-base);
   color: inherit;
+  cursor: pointer;
 }
 
 .row {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 1.5rem;
 }
 
 .container {
-  padding: 0 1.5rem;
   width: 100%;
 }
 
 .icon {
   color: currentColor;
   fill: currentColor;
+}
+
+.btn {
+  padding: 0.85em 2.2em;
+  text-transform: uppercase;
+  border: none;
+  border-radius: var(--border-radius);
+  color: var(--peach-100);
+  font-size: var(--text-base);
+  font-weight: 700;
+  cursor: pointer;
+
+  &--primary {
+    background: var(--burg-700);
+
+    &:hover {
+      background: var(--burg-800);
+    }
+  }
+
+  &--secondary {
+    background: var(--peach-700);
+
+    &:hover {
+      background: var(--burg-800);
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    padding: 0.6em 1.5em;
+    font-size: var(--text-sm);
+  }
 }
 
 .header {
@@ -128,12 +180,15 @@ button {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
     // TODO
     // background: var(--peach-500);
     // background: var(--peach-200);
 
     &.full-color {
       // background: var(--peach-500);
+      // background: var(--brown-900);
+      // color: var(--burg-500);
     }
   }
 
@@ -247,6 +302,7 @@ button {
 .category-bar {
   background: var(--brown-900);
   &__nav {
+    // z-index: 20;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -278,6 +334,7 @@ button {
 }
 
 .nav-drawer {
+  // z-index: 100;
   // background: peachpuff;
   background: var(--peach-200);
   height: 100vh;
@@ -370,6 +427,244 @@ button {
   }
 }
 
+section {
+  padding: 2rem 0;
+}
+
+.section-hero {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: center;
+  padding-bottom: 0;
+  padding-top: 0;
+
+  @media only screen and(max-width: 800px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media only screen and(max-width: 600px) {
+    // grid-template-columns: repeat(2, 1fr);
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+  }
+
+  &__content {
+    grid-column: 1 / span 6;
+    transform: translateY(-2rem);
+    z-index: 2;
+
+    @media only screen and(max-width: 1000px) {
+      grid-column: 1 / span 3;
+      width: max-content;
+      transform: translateY(0);
+    }
+    @media only screen and(max-width: 600px) {
+      // grid-column: 1 / span 1;
+      transform: translateY(0);
+      width: fit-content;
+    }
+  }
+
+  &__title {
+    font-size: var(--text-8xl);
+
+    @media only screen and(max-width: 1200px) {
+      font-size: var(--text-7xl);
+    }
+    @media only screen and(max-width: 800px) {
+      font-size: var(--text-6xl);
+    }
+    @media only screen and(max-width: 600px) {
+      font-size: var(--text-5xl);
+    }
+  }
+
+  &__image {
+    grid-column: span 6;
+    transform: translateX(6rem) translateY(-4rem);
+    position: relative;
+    // z-index: -1;
+
+    @media only screen and(max-width: 1000px) {
+      grid-column: span 1;
+      width: 750px;
+      transform: translateX(0) translateY(0);
+    }
+
+    @media only screen and(max-width: 600px) {
+      display: none;
+      transform: translateX(40%) translateY(0);
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &__buttons {
+    margin-top: 2rem;
+
+    display: flex;
+    gap: 0.5rem;
+  }
+}
+
+.section-popular {
+  margin-bottom: 4rem;
+
+  @media only screen and(max-width: 800px) {
+    margin-bottom: 1rem;
+  }
+}
+
 .no-scrollbar {
   overflow: hidden;
+}
+
+.title-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  // z-index: -1;
+
+  .icon {
+    position: absolute;
+    fill: var(--burg-600-opaque);
+    // z-index: -1;
+
+    &[name='trending-up'] {
+      left: -3rem;
+      height: 160px;
+      width: 160px;
+      transform: translateY(0.5rem);
+    }
+    &[name='discount'] {
+      height: 120px;
+      width: 120px;
+      left: -2rem;
+    }
+  }
+}
+
+.product-grid {
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  overflow-x: auto;
+  flex-wrap: none;
+  transition: padding-left 800ms ease-out;
+  margin-left: 0.5rem;
+
+  &::-webkit-scrollbar {
+    width: 0.5rem; //only hide the vertical scrollbar
+    height: 0px; //only hide the horizontal scrollbar
+  }
+
+  @media only screen and(max-width: 800px) {
+    margin-top: 2rem;
+  }
+
+  @media only screen and(max-width: 600px) {
+    // margin-top: 1rem;
+  }
+}
+
+.product-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: var(--border-radius);
+  background: var(--peach-white-opaque);
+  backdrop-filter: blur(6px);
+  flex: 0 0 300px;
+
+  box-shadow: 0 8px 20px 2px hsla(16, 100%, 82%, 0.3);
+
+  @media only screen and(max-width: 600px) {
+    flex: 0 0 250px;
+  }
+
+  &__image {
+  }
+
+  &__content {
+    padding: 1rem;
+  }
+
+  .product {
+    &__info {
+      margin-bottom: 0.5rem;
+    }
+
+    &__crumbs {
+      font-size: var(--text-xs);
+      color: var(--burg-700-opaque);
+      font-family: var(--font-display);
+      margin-top: -6px;
+    }
+
+    &__name {
+      font-size: var(--text-2xl);
+      margin-bottom: 0.5em;
+      margin-top: 0.4em;
+      font-weight: 800;
+
+      @media only screen and (max-width: 600px) {
+        font-size: var(--text-lg);
+      }
+    }
+
+    &__description {
+      font-size: var(--text-md);
+      line-height: 1.3;
+
+      @media only screen and (max-width: 600px) {
+        font-size: var(--text-base);
+      }
+    }
+
+    &__price {
+      display: flex;
+      justify-content: flex-end;
+      align-items: baseline;
+
+      &--currency {
+        font-family: var(--font-primary);
+        font-weight: 300;
+        font-size: var(--text-3xl);
+        margin-right: 3px;
+
+        @media only screen and (max-width: 600px) {
+          font-size: var(--text-lg);
+        }
+      }
+
+      &--amount {
+        font-family: var(--font-display);
+        font-weight: 600;
+        font-size: var(--text-4xl);
+
+        @media only screen and (max-width: 600px) {
+          font-size: var(--text-2xl);
+        }
+      }
+    }
+
+    &__buttons {
+      margin-top: 0.75rem;
+      width: 100%;
+      display: flex;
+
+      .btn {
+        flex: 1;
+        padding-top: 1em;
+        padding-bottom: 1em;
+        // border-top-left-radius: 0;
+        // border-top-right-radius: 0;
+
+        @media only screen and (max-width: 600px) {
+          padding: 0.8em;
+        }
+      }
+    }
+  }
 }
